--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:8081/buysell
-spring.datasource.username=root
-spring.datasource.password=1234
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:mysql://localhost:8081/buysell}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:root}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:1234}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
